# Matrics

./: CMakeLists.txt  Dockerfile  README.md  VectorDouble.cpp  main.cpp
.github/workflows/: cmake.yml
Tests/: CMakeLists.txt  test.cpp  tests.cpp
include/: Matrix.h  Utility.h  VectorDouble.h
linters/: linters.sh
src/: Matrix.cpp  VectorDouble.cpp
